# keyboard_proto

./: .gitmodules  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
src/: CMakeLists.txt  config.h  main.c
template/: module.c  module.h
